--- a/application/templates/product_comment_form.html
+++ b/application/templates/product_comment_form.html
@@ -1,5 +1,6 @@
                             <form action="{{ url_for('singleproduct', product_id=product_id) }}" method="post"  enctype="multipart/form-data" class="form-horizontal answer_form" id ="{{ parent_id }}">
                                     <p>
+                                          {{ form.csrf_token }}
                                {{form.text(class_="form-control my_textarea", rows="2")}}<br>
                                      {{form.file}}<br>
 
