--- a/application/static/style/style.css
+++ b/application/static/style/style.css
@@ -259,3 +259,30 @@ div.messages-container p{
   width: 200px;
   height: 300px;
 }
+
+
+.parent-div, .popup-div{
+    width: 100%;
+   height: 100%;
+   position:absolute;
+    bottom: 75%;
+
+   left:20px;
+
+   background-color: lightskyblue;
+}
+.popup-div{
+    width: 40%;
+   display:none;
+    z-index:10;
+}
+
+
+.smile-container {
+
+  position: relative;
+}
+
+img.liked, img.unliked{
+    width: 30px;
+}
